fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ form {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  margin-left: 20px;
   width: 800px;
 }
 
@@ -47,7 +48,7 @@ ul {
   margin: 0;
   padding: 0;
   padding-top: 5px;
-  width: 20%;
+  width: 15%;
   background-color: #333;
   position: fixed;
   height: 100%;
